<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
     >

    <TextView
        android:id="@+id/add_new_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/add_new_category" />

    <EditText
        android:id="@+id/new_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_category_name"
        android:ems="10"
        android:layout_below="@+id/add_new_category"
        android:layout_centerVertical="true"
         >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/add_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:layout_below="@+id/new_category_name"
       
        
        
         />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_below="@+id/new_category_name"
        android:layout_toRightOf="@+id/add_category"
         />

</RelativeLayout>
