<?xml version="1.0" encoding="utf-8"?>

 
    <ScrollView
        android:id="@+id/scrollView1"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
         >

           
            
    <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    
    <TextView
        android:id="@+id/page_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="" />

    <Spinner
        android:id="@+id/choosed_Category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_below="@+id/page_header"
         />

    <Button
        android:id="@+id/add_new_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choosed_Category"
        android:layout_alignParentRight="true"
        android:text="@string/add_new_category" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_new_category"
        android:layout_alignParentLeft="true"
        android:text="@string/expense_tag" />

    <EditText
        android:id="@+id/expense_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expense_content"
        android:layout_alignParentLeft="true"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/amount_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amount_expense"
        android:layout_alignParentLeft="true"
        android:text="@string/date" />
    
    
    <Button
        android:id="@+id/expense_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_below="@+id/amount_expense"
        android:layout_toRightOf="@+id/textView4"
        android:text="" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expense_date"
        android:layout_alignParentLeft="true"
        android:text="@string/time" />
    
    
    <Button
        android:id="@+id/expense_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/expense_date"
        android:layout_toRightOf="@+id/textView5"
        android:text="" />
    
    
    <Button
        android:id="@+id/commit_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/expense_time"
        android:text="@string/commit_expense" />
            

       </RelativeLayout>
        
    </ScrollView>


